NGSTACK-734 Fix overflow issue in Firefox

--- a/assets/sass/_cookie_control.scss
+++ b/assets/sass/_cookie_control.scss
@@ -128,7 +128,7 @@
     }
 
     .ng-cc-optional-list {
-        // display: none;
+        position: relative;
         margin: 0;
         overflow: hidden;
         max-height: 0;
